Refactor HTML code in help.html
The HTML code in help.html has been refactored by replacing '--' with '-'. This change in class name convention enhances readability and standardization across the codebase. The new naming convention is more succinct and user-friendly.

--- a/public/app/css/account.full.css
+++ b/public/app/css/account.full.css
@@ -248,7 +248,7 @@ input[type=checkbox], input[type=radio] {
     font-weight: 400;
 }
 
-.loader--wrp {
+.loader-wrp {
     border: 10px solid;
     border-image: linear-gradient(to right, #7000ff, #e05a1f) 1 stretch;
     border-radius: 3px;
