--- a/public/app/css/sign-in.full.css
+++ b/public/app/css/sign-in.full.css
@@ -136,7 +136,7 @@ input[type=number] {
     animation-iteration-count: infinite;
 }
 
-.loader--wrp {
+.loader-wrp {
     border: 10px solid;
     border-image: linear-gradient(to right, #7000ff, #e05a1f) 1 stretch;
     border-radius: 3px;
