--- a/public/app/css/allocation.full.css
+++ b/public/app/css/allocation.full.css
@@ -27,7 +27,7 @@ input:disabled {
 .skel_checkout_bg,
 .skel_prx_allo_crd_bg,
 .skel_sect_crd_det_bg,
-.skel_swap_grid_item--bg {
+.skel_swap_grid_item-bg {
     animation-name: gradient-animation;
     animation-duration: 1s;
     animation-iteration-count: infinite;
@@ -85,7 +85,7 @@ input:disabled {
     background-color: #202020;
 }
 
-.user_btn_item--text {
+.user_btn_item-text {
     text-overflow: ellipsis;
 }
 
@@ -93,12 +93,12 @@ input:disabled {
     display: none;
 }
 
-.w-embed.qm_item_auto_renew_input--wrap {
+.w-embed.qm_item_auto_renew_input-wrap {
     height: 14px;
     line-height: 0;
 }
 
-.loader--wrp {
+.loader-wrp {
     border: 10px solid;
     border-image: linear-gradient(to right, #7000ff, #e05a1f) 1 stretch;
     border-radius: 3px;
